--- a/css/screen.css
+++ b/css/screen.css
@@ -357,11 +357,11 @@ article footer ul li:last-of-type {
 }
 
 article footer ul li a {
-	padding-left: 1.25em;
+	padding-left: 1em;
 }
 
 article footer ul li:last-of-type a {
-	padding-left: 1.75em;
+	padding-left: 1.35em;
 }
 
 .icon-continue {
@@ -542,9 +542,9 @@ form#comment_form input, form#comment_form #captcha {
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
-	transition: all .25s ease-in-out;
 	-webkit-transition: all .25s ease-in-out;
 	-moz-transition: all .25s ease-in-out;
+	transition: all .25s ease-in-out;
 }
 
 form#comment_form textarea {
@@ -556,9 +556,9 @@ form#comment_form textarea {
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
 	border: 1px solid rgb(227,227,208);
-	transition: all .25s ease-in-out;
 	-webkit-transition: all .25s ease-in-out;
 	-moz-transition: all .25s ease-in-out;
+	transition: all .25s ease-in-out;
 }
 
 form#comment_form input:focus, form#comment_form textarea:focus {
@@ -571,6 +571,46 @@ form#comment_form input:focus, form#comment_form textarea:focus {
 form#comment_form fieldset:last-of-type {
 	padding-bottom: 3em;
 }
+
+
+/*---- Work Pages -----*/
+
+
+ul.thumbs { 
+	list-style: none;
+	margin: 0 0 3em 0;
+	padding: 0;
+}
+
+ul.thumbs li { 
+	display: inline-block;
+	width: 48%;
+	padding: 0 2.5% 2% 2.5%;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+ul.thumbs li img { 
+	display: block;
+	width: 100%;
+	background: rgb(255,255,255);
+	border: 1px solid rgb(222,218,211);
+	-moz-box-shadow: 0 0 2px rgba(232,228,221);
+	-webkit-box-shadow: 0 0 2px rgba(232,228,221);
+	box-shadow: 0 0 2px rgba(232,228,221);
+	padding: 3%;
+}
+
+ul.thumbs li a:hover img { 
+	-webkit-box-shadow: 0px 0px 5px rgb(202,198,191);
+	-moz-box-shadow: 0px 0px 5px rgb(202,198,191);
+	box-shadow: 0px 0px 5px rgb(202,198,191);
+	-webkit-transition: all .25s ease-in-out;
+	-moz-transition: all .25s ease-in-out;
+	transition: all .25s ease-in-out;
+}
+
 
 
 /*---- Complementary ----*/
@@ -712,7 +752,7 @@ section[role="complementary"] h2 {
 
 
 .skills {
-	margin: 3em auto 0 auto;
+	margin: 0 auto 2em auto;
 	overflow: auto;
 	text-align: center;
 	max-width: 26em;
@@ -1199,6 +1239,13 @@ section[role="complementary"] {
 
 .blogthumb {
 	display: block;
+}
+
+/*---- Work -----*/
+
+ul.thumbs li { 
+	width: 24%;
+	padding: 0 1.2% 0.8% 1.2%;
 }
 
 
