--- a/css/screen.css
+++ b/css/screen.css
@@ -976,6 +976,120 @@ a:active.nav-toggle {
 	}
 }
 
+@media screen and (min-width: 27em) {
+	
+	/* -- Bump down banner text -- */ 
+
+	.intro {
+		padding: 14.5em 3% 1em 3%;
+	}
+
+	.intro h3 {
+		font-size: 1.25em;
+	}
+
+	.intro p {
+		font-size: .9em;
+		margin-top: 1em;
+	}
+	
+}
+
+@media screen and (min-width: 30em) {
+
+	.intro {
+		max-width: 70%;
+		padding: 14em 3% 1em 3%;
+	}
+
+	.intro h3 {
+		font-size: 1.25em;
+	}
+
+	.intro p {
+		font-size: 1em;
+		margin-top: 1em;
+	}
+	
+	ul.thumbs li { 
+		width: 32%;
+		padding: 0 1.4% 0.8% 1.4%;
+	}
+	
+}
+
+@media screen and (min-width: 35em) {
+
+	.intro {
+		max-width: 79%;
+		padding: 15em 3% 1em 3%;
+	}
+
+	.intro h3 {
+		font-size: 1.3em;
+	}
+
+	.intro p {
+		font-size: 1em;
+		margin-top: 1em;
+	}
+	
+}
+
+@media screen and (min-width: 40em) {
+
+	.intro {
+		max-width: 60%;
+		padding: 14em 3% 1em 3%;
+	}
+
+	.intro h3 {
+		font-size: 1.3em;
+	}
+
+	.intro p {
+		font-size: 1em;
+		margin-top: 1em;
+	}
+	
+}
+
+@media screen and (min-width: 48em) {
+
+	.intro {
+		max-width: 80%;
+		padding: 17em 3% 1em 3%;
+	}
+
+	.intro h3 {
+		font-size: 1.3em;
+	}
+
+	.intro p {
+		font-size: 1em;
+		margin-top: 1em;
+	}
+	
+}
+
+
+@media screen and (min-width: 54em) {
+
+	.intro {
+		max-width: 80%;
+		padding: 17em 3% 1em 3%;
+	}
+
+	.intro h3 {
+		font-size: 1.3em;
+	}
+
+	.intro p {
+		font-size: 1em;
+		margin-top: 1em;
+	}
+	
+}
 
 
 @media screen and (min-width: 57em) {
@@ -1282,9 +1396,19 @@ footer[role="contentinfo"] {
 
 @media screen and (min-width: 63em) {
 
-.availability a {
-	font-size: 1.2em;
-}
+	.availability a {
+		font-size: 1.2em;
+	}
+
+	.intro {
+		max-width: 80%;
+		padding: 19.25em 3% 1em 3%;
+	}
+
+	.intro p {
+		font-size: 1em;
+		margin-top: 1em;
+	}
 
 }
 
