--- a/css/screen.css
+++ b/css/screen.css
@@ -97,7 +97,7 @@ main[role="main"] {
 } 
 
 section[role="complementary"] {
-	background: rgb(232,228,221);
+	background: rgb(235,230,220);
 	padding-right: 5%;
 	padding-left: 5%;
 	padding-bottom: 3em;
@@ -119,7 +119,6 @@ nav[role="navigation"]{
 	background: rgb(0,0,0);
 	position: relative;
 	text-align: center;
-	float: left;
 	width: 90%;
 	height: auto;  /* ??? */
 }
@@ -250,7 +249,7 @@ nav[role="navigation"] ul li a:hover {
 	color: rgb(255,255,255);
 }
 
-div[role="banner"] {
+.sel {
 	margin: 0 auto;
 	max-width: 100%;
 	height: 29.5em;
@@ -258,6 +257,34 @@ div[role="banner"] {
 	padding: 0;
 	background-repeat: no-repeat;
 	background-position: 50% 82%;
+	color: rgb(255,255,255);
+	text-align: center;
+	clear: both;
+}
+
+.illustration {
+	margin: 0 auto;
+	max-width: 100%;
+	height: 5.4em;
+	overflow: auto;
+	padding: 0;
+	background-image: url(../img/illustration-header.jpg);
+	background-repeat: no-repeat;
+	background-position: top;
+	color: rgb(255,255,255);
+	text-align: center;
+	clear: both;
+}
+
+.photo {
+	margin: 0 auto;
+	max-width: 100%;
+	height: 5.4em;
+	overflow: auto;
+	padding: 0;
+	background-image: url(../img/photo-header.jpg);
+	background-repeat: no-repeat;
+	background-position: top;
 	color: rgb(255,255,255);
 	text-align: center;
 	clear: both;
@@ -398,8 +425,14 @@ article footer ul li:last-of-type a {
 
 /*---- Blog Page -----*/
 
+.blog main[role="main"] h1 {
+	color: rgb(178,43,20);
+	font-size: 1.8em;
+	margin-bottom: 0;
+}
+
 .author {
-	background-color: rgb(232,228,221);
+	background-color: rgb(235,230,220);
 	padding: 1.5em;
 	display: block;
 	margin-top: 3em;
@@ -603,7 +636,7 @@ ul.thumbs li img {
 	display: block;
 	width: 100%;
 	background: rgb(255,255,255);
-	border: 1px solid rgb(222,218,211);
+	border: 1px solid rgb(232,228,221);
 	-moz-box-shadow: 0 0 2px rgb(232,228,221);
 	-webkit-box-shadow: 0 0 2px rgb(232,228,221);
 	box-shadow: 0 0 2px rgb(232,228,221);
@@ -620,6 +653,46 @@ ul.thumbs li a:hover img {
 }
 
 
+/*---- About Page -----*/
+
+.aboutme {
+	width: 90%;
+	clear: both;
+	margin: 0 auto 3em auto;
+}
+
+.aboutme img {
+	float: right;
+	width: 60%;
+	margin-top: -4em;
+	margin-left: 1em;
+}
+
+.aboutme p:first-of-type {
+	font-size: 1.25em;
+	margin-bottom: 1em;
+}
+
+.aboutme p:last-of-type {
+	margin-bottom: 2em;
+}
+
+.about article h1 {
+	color: rgb(178,43,20);
+	font-size: 1.8em;
+	margin-bottom: 0;
+}
+
+.about article h2 {
+	color: rgb(178,43,20);
+	font-size: 1.5em;
+	margin-bottom: 0;
+}
+
+.about article h3 {
+	font-size: 1em;
+	margin: 1em 0 0 0;
+}
 
 /*---- Complementary ----*/
 
@@ -705,7 +778,7 @@ section[role="complementary"] h2 {
 }
 
 .categories ul li a:hover {
-	background: rgb(226,221,211);
+	background: rgb(229,222,209);
 }
 
 .categories p {
@@ -716,7 +789,6 @@ section[role="complementary"] h2 {
 	margin: 0 auto;
 	margin-top: 3em;
 }
-
 
 .locations ul {
 	max-width: 26.5em;
@@ -766,8 +838,27 @@ section[role="complementary"] h2 {
 	max-width: 26em;
 }
 
+.featured {
+	margin: 0 auto 2em auto;
+	text-align: center;
+	max-width: 26em;
+}
 
+.featured ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
 
+.featured ul li h3 {
+	font-size: .9em;
+	margin-top: 1em;
+}
+
+.featured ul li p {
+	font-size: .95em;
+	margin-top: 0;
+}
 
 /*---- Footer -----*/
 
@@ -1059,6 +1150,15 @@ a:active.nav-toggle {
 		margin-top: 1em;
 	}
 	
+		/*---- Work -----*/
+
+ul.thumbs li { 
+	width: 24%;
+	padding: 0 1.2% 0.8% 1.2%;
+}
+
+	
+	
 }
 
 @media screen and (min-width: 48em) {
@@ -1076,6 +1176,7 @@ a:active.nav-toggle {
 		font-size: 1em;
 		margin-top: 1em;
 	}
+	
 	
 }
 
@@ -1323,7 +1424,7 @@ section[role="complementary"] {
 }
 
 .categories ul li a:hover {
-	background: rgb(236,231,223);
+	background: rgb(235,230,220);
 }
 
 
@@ -1365,19 +1466,15 @@ section[role="complementary"] {
 	text-align: left;
 }
 
+.featured {
+	text-align: left;
+}
 
 
 /*---- Main -----*/
 
 .blogthumb {
 	display: block;
-}
-
-/*---- Work -----*/
-
-ul.thumbs li { 
-	width: 24%;
-	padding: 0 1.2% 0.8% 1.2%;
 }
 
 
