--- a/css/screen.css
+++ b/css/screen.css
@@ -656,16 +656,27 @@ ul.thumbs li a:hover img {
 /*---- About Page -----*/
 
 .aboutme {
-	width: 90%;
+	display: block;
+	margin: 0 auto;
+	max-width: 90%;
+	
+	border: 1px red solid;
+	
 	clear: both;
 	margin: 0 auto 3em auto;
 }
 
+.aboutme h1 {
+	color: rgb(178,43,20);
+}
+
 .aboutme img {
 	float: right;
-	width: 60%;
-	margin-top: -4em;
-	margin-left: 1em;
+	max-width: 100%;
+	/* margin-top: -4em; */
+	margin-top: 1em;
+	margin-bottom: 1.5em;
+	margin-left: 1.5em;
 }
 
 .aboutme p:first-of-type {
@@ -674,7 +685,7 @@ ul.thumbs li a:hover img {
 }
 
 .aboutme p:last-of-type {
-	margin-bottom: 2em;
+	margin-bottom: 2.5em;
 }
 
 .about article h1 {
@@ -1112,6 +1123,14 @@ a:active.nav-toggle {
 	ul.thumbs li { 
 		width: 32%;
 		padding: 0 1.4% 0.8% 1.4%;
+	}
+	
+	.aboutme img {
+	float: right;
+	max-width: 60%;
+	margin-top: -3em;
+	margin-bottom: 1.5em;
+	margin-left: 1.5em;
 	}
 	
 }
