--- a/css/screen.css
+++ b/css/screen.css
@@ -742,10 +742,47 @@ ul.thumbs li a:hover img {
 }
 
 .speaking ul li p {
-	margin: 0;
+	margin: 0 auto;
 	text-align: center;
 }
 
+
+.past, .upcoming {
+	display: inline-block;
+	font-size: .75em;
+	width: 80px;
+	padding: .25em;
+	text-transform: uppercase;
+	text-decoration: none;
+	text-shadow: none;
+	-moz-border-radius: .5em;
+	-webkit-border-radius: .5em;
+	border-radius: .5em;
+	margin-top: 1em;
+	cursor: pointer;
+}
+
+.past {
+	background-color: rgb(235,230,220);
+	color: rgb(0,0,0);
+}
+
+.past:hover {
+	background-color: rgb(229,222,209);
+	color: rgb(0,0,0);
+	text-decoration: none;
+}
+
+.upcoming {
+	background-color: rgb(100,130,50);
+	color: rgb(255,255,255);
+}
+
+.upcoming:hover {
+	background-color: rgb(97,124,55);
+	color: rgb(255,255,255);
+	text-decoration: none;
+}
 
 
 /*---- Contact Page -----*/
