--- a/css/screen.css
+++ b/css/screen.css
@@ -649,6 +649,32 @@ ul.thumbs li a:hover img {
 	transition: all .25s ease-in-out;
 }
 
+.work main[role="main"] {
+	padding-bottom: 3em;
+}
+
+.work main[role="main"] img {
+	background: rgb(255,255,255);
+	border: 1px solid rgb(232,228,221);
+	-moz-box-shadow: 0 0 2px rgb(232,228,221);
+	-webkit-box-shadow: 0 0 2px rgb(232,228,221);
+	box-shadow: 0 0 2px rgb(232,228,221);
+	padding: 1.5%;
+	width: 97%;
+	margin: 0 0 1em 0;
+}
+
+.work section[role="complementary"] header ul {
+	list-style-type: none;
+	margin: 1em 0 0 0;
+	padding: 0;
+	font-size: .85em;
+}
+
+.work section[role="complementary"] footer {
+	margin: 0 0 3em 0;
+}
+
 
 /*---- About Page -----*/
 
@@ -705,12 +731,16 @@ ul.thumbs li a:hover img {
 
 .about article h3 {
 	font-size: 1em;
+	margin: 2em 0 0 0;
+}
+
+.about article h3:first-of-type {
 	margin: 1em 0 0 0;
 }
 
 .speaking {
 	margin: 0 auto;
-	margin-top: 3em;
+	margin-top: 2.75em;
 }
 
 .speaking h2 {
@@ -961,7 +991,6 @@ section[role="complementary"] h2 {
 	max-width: 26em;
 }
 
-
 .skills {
 	margin: 0 auto 2em auto;
 	overflow: auto;
@@ -970,7 +999,7 @@ section[role="complementary"] h2 {
 }
 
 .featured {
-	margin: 3em auto 2em auto;
+	margin: 2em auto 2em auto;
 	text-align: center;
 	max-width: 26em;
 }
@@ -1678,7 +1707,7 @@ footer[role="contentinfo"] {
 }
 
 .doc-foot ul li {
-	padding-right: 2em;
+	padding-right: 1.25em;
 	display: inline;
 } 
 
